Notebooks 2 and 3 edited for matching uniform style.

--- a/01_Lives_and_Deaths_of_Stars/Lives_and_Deaths_of_Stars.ipynb
+++ b/01_Lives_and_Deaths_of_Stars/Lives_and_Deaths_of_Stars.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To execute or run a selected cell, hit `[Shift + Enter]` on your keyboard.\n",
+    "To execute or run a selected cell, hit `[Shift + Enter]` on your keyboard. That is, while holding the Shift key, click on the Enter key.\n",
     "\n",
     "<div class='alert alert-info'>\n",
     "    <font size='3'><b>Select the cell below and read its contents. Then, run the cell.</b></font>\n",
@@ -138,7 +138,9 @@
     "import matplotlib.cm as cm\n",
     "from IPython.core.display import Image, display\n",
     "from astroML.datasets import fetch_sdss_spectrum, fetch_vega_spectrum, fetch_sdss_S82standards\n",
-    "from astroML.plotting import MultiAxes"
+    "from astroML.plotting import MultiAxes\n",
+    "\n",
+    "print(\"Congrats! You have successfully activated the libraries needed later to make plots.\")"
    ]
   },
   {
@@ -181,7 +183,8 @@
    },
    "outputs": [],
    "source": [
-    "# You don't need to use the same numbers, or indeed even these many - put in whatever you like for x & y.\n",
+    "# You don't need to use the same numbers, or indeed even these many.\n",
+    "# Put in whatever you like from -100 to 100 for x & y.\n",
     "\n",
     "x = [11, 31, 2, -7, 4, -10, 6]\n",
     "y = [10, 21, 0, 9, 17, 13, 18]\n",
@@ -234,14 +237,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What's nifty is that you can plot functions as well! \n",
+    "# Want to know what x to the 3.5 power + 57 is? Compute and plot it!\n",
+    "\n",
+    "# This command creates a series of numbers from 0 to 20 increasing by 1.\n",
+    "x = np.arange(0,20,1)\n",
+    "\n",
+    "# If you want, you can print it out.\n",
+    "print(x)\n",
+    "\n",
+    "# You can now relate y to x with some function of the sort you've learned in school.\n",
+    "y = x**3.5 + 57\n",
+    "\n",
+    "# Now, you can plot your data!\n",
+    "plt.figure()\n",
+    "plt.plot(x,y, marker='None', color='green', linestyle='-')\n",
+    "plt.xlabel('X')\n",
+    "plt.ylabel('Y')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Nifty! We've gone from plotting a bunch of points to plotting something continious - a curve.\n",
     "\n",
+    "**OPTIONAL:**\n",
+    "\n",
     "You can plot all sorts of different curves - parabolas, sines and cosines or other trig functions, or whatever you can imagine really! Try it! You can create new cells below this one, by clicking it, then using the menu at the top - **Insert > Insert Cell Below**.\n",
     "\n",
-    "Type in your code for y based on x (you can even change x) and then plot it with the plot command from above. Then, hit `[Shift + Enter]` to run it!\n",
+    "In that new cell, type in your equation for y based on x (like y = 3 * x + 2 but with no spaces) and then plot it with the 4 plot command lines from above. Then, hit `[Shift + Enter]` to run it!\n",
     "___"
    ]
   },
@@ -282,13 +312,13 @@
    "source": [
     "## Part 2.1: Selecting Spectra to Plot\n",
     "\n",
-    "Click [here](http://classic.sdss.org/dr5/algorithms/spectemplates/) for the spectra of different stars.\n",
+    "Click [here](http://classic.sdss.org/dr5/algorithms/spectemplates/) for the spectra of various types of stars.\n",
     "\n",
-    "Look at the gif links, and look for **Plate**, **Fiber** and **MJD**. Write them down on a piece of paper.\n",
+    "Look at a gif link on the right of the plots of either an \"O star\", an \"O/B trnsition star\", a \"B star\" or an \"A star\". Find **MJD**, **Plate**, and **Fiber**. Write the values down on a piece of paper.\n",
     "\n",
     "Next, let's go look at the data for that star [here](http://cas.sdss.org/dr14/en/tools/explore/Summary.aspx).\n",
     "\n",
-    "Click on **Search** on the left hand side menu bar, and then enter the **Plate**, **Fiber** and **MJD** that you wrote down there, and hit **Go**.\n",
+    "Click on **Search** on the upper part of the left hand side menu bar. At the top of the page, 6 options appear. The third one down on the right asks for you to enter the **Plate**, **MJD** and **Fiber** values that you wrote down from above. Do that and then hit the **Go** button next to those entries.\n",
     "\n",
     "If you click on the image, you can move around, zoom in and out - it's like Google Maps for the night sky!\n",
     "___"
