--- a/02_Variable_Stars/Variable_Stars.ipynb
+++ b/02_Variable_Stars/Variable_Stars.ipynb
@@ -4,20 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <u>Variable Stars</u>\n",
-    "#### Written by Chien-Hsiu Lee, NOAO\n",
+    "<br>\n",
+    "<br>\n",
+    "<font size='6'><u><b>Variable Stars</b></u></font>\n",
+    "<br>\n",
     "\n",
-    "In this activity we are going to look at stars that change their magnitudes (brightness) in time. We can use a certain group of these stars to help estimate distances to other astronomical objects such as M31, our neighboring galaxy."
+    "##### Written by Chien-Hsiu Lee, NOAO\n",
+    "##### Revised by Andres Jaramillo\n",
+    "\n",
+    "In this activity we are going to look at stars that change their magnitudes (brightness) in time. We can use a certain group of these stars to help estimate distances to other astronomical objects such as M31, our neighboring galaxy.\n",
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Table of Contents\n",
     "\n",
-    "# Exercise 1: Finding the period of a star\n",
+    "* [How to Use This Notebook](#How-to-Use-This-Notebook)\n",
+    "* [Pre-Activity Setup](#Pre-Activity-Setup)\n",
+    "* [Activity 1: Finding the Period of a Star](#Activity-1:-Finding-the-Period-of-a-Star)\n",
+    "    * [Question 1: Can you estimate the period from this diagram?](#Question-1:-Can-you-estimate-the-period-from-this-diagram?)\n",
+    "* [Activity 2: Classify the Variable Star](#Activity-2:-Classify-the-Variable-Star)\n",
+    "    * [Question 2: Using a4/a2 and the period, can you detemine the type of this variable?](#Question-2:-Using-a4/a2-and-the-period,-can-you-detemine-the-type-of-this-variable?)\n",
+    "* [Activity 3: Use Leavitt Law to Estimate Distance](#Activity-3:-Use-Leavitt-Law-to-Estimate-Distance)\n",
+    "    * [Question 3: Can you estimate the distance to the Andromeda galaxy?](#Question-3:-Can-you-estimate-the-distance-to-the-Andromeda-galaxy?)\n",
+    "    * [Bonus Question: Can you estimate the distance to Large Magellanic Cloud?](#Bonus-Question:-Can-you-estimate-the-distance-to-Large-Magellanic-Cloud?)\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How to Use This Notebook\n",
     "\n",
-    "In this exercise, we will learn how to display light curves (brightness as a function of time) and from the light curve, find the period of a variable star.\n"
+    "The webpage you are in is actually an app - much like the ones on your cellphone. This app consists of cells.\n",
+    "\n",
+    "An *input* cell looks like a light grey box with an `In [ ]:` on its left. Input cells each contain code - instructions to make the computer do something.\n",
+    "\n",
+    "To activate or select a cell, click anywhere inside of it.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select the cell below and read its contents.</b></font>\n",
+    "</div>"
    ]
   },
   {
@@ -26,10 +57,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#first we need to load some libraries/packages\n",
+    "# Text that follows a \"#\" is known as a comment.\n",
+    "# Comments do not affect your code in any way.\n",
+    "# You should always read the comments at the top of each cell you interact with.\n",
+    "# Comments will be used to describe what the cell's code is actually doing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To execute or run a selected cell, hit `[Shift + Enter]` on your keyboard.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select the cell below and read its contents. Then, run the cell.</b></font>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Text that DOESN'T follow a \"#\" is considered code.\n",
+    "# Lines of code are instructions given to your computer.\n",
+    "# The line of code below is a \"print\" statement.\n",
+    "# A print statement literally prints out the text between its quotes.\n",
+    "\n",
+    "print(\"Congrats! You have successfully run your first cell!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running a cell creates an *output* directly below it. An output can be some text, a graph, an interactive slider, or even nothing at all! For that last case, you know you have run a cell when the `In [ ]:` becomes `In [#]:`, where \"#\" is any number.\n",
+    "\n",
+    "You can learn more about how Jupyter notebooks work at https://try.jupyter.org/\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pre-Activity Setup\n",
+    "\n",
+    "In order for any of the activities to work properly, you must import the libraries needed for the code in this notebook.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select and run the cell below.</b></font>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#First we need to load some libraries/packages\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from astropy.io import ascii\n"
+    "from astropy.io import ascii"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Activity 1: Finding the Period of a Star\n",
+    "\n",
+    "In this exercise, we will learn how to display light curves (brightness as a function of time) and from the light curve, find the period of a variable star."
    ]
   },
   {
@@ -38,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#then we read in the observation data and plot the light curve\n",
+    "#We read in the observation data and plot the light curve\n",
     "lc=ascii.read('cep1862r.tab')\n",
     "mjd, mag, err = lc['col1'], lc['col2'], lc['col3']\n",
     "\n",
@@ -60,8 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a good start and there appears to be a periodic nature to the star, so lets find the period.\n",
-    "\n"
+    "This is a good start and there appears to be a periodic nature to the star, so lets find the period."
    ]
   },
   {
@@ -94,21 +200,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Questions 1: Can you estimate the period from this diagram?\n",
-    "\n"
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That was a great way to make sure we know the period. In fact, if we assume all the data sits on the same periodic function, we should be able to condense all the data to a single period, or \"phased light curve\". This will make it easier to read and see the period."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Question 1: Can you estimate the period from this diagram?\n",
+    "\n",
+    "That was a great way to make sure we know the period. In fact, if we assume all the data sits on the same periodic function, we should be able to condense all the data to a single period, or \"phased light curve\". This will make it easier to read and see the period.\n",
+    "\n",
     "From the above diagram of likelihood versus period, you can probably determine the period of the variable star. But for arguments sake, let's play around with different periods, say from 10 to 60 days, and see which of their diagram of period versus brightness make sense."
    ]
   },
@@ -140,9 +242,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 2: Classify the variable star\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Activity 2: Classify the Variable Star\n",
     "\n",
-    "In this exercise, we will learn how to use a series of cosine and sine functions to model a light curve (so-called Fourier decomposition), and how we can use the resulting coefficients to classify the type of variable star.         "
+    "In this exercise, we will learn how to use a series of cosine and sine functions to model a light curve (so-called Fourier decomposition), and how we can use the resulting coefficients to classify the type of variable star."
    ]
   },
   {
@@ -167,8 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And plot the resulting curve on the data\n",
-    "\n"
+    "And plot the resulting curve on the data"
    ]
   },
   {
@@ -209,25 +317,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Questions 2: Using a4/a2 and the period, can you detemine the type of this variable?"
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To determine the type of variable star from the period, check the classification diagram: \n",
+    "## Question 2: Using a4/a2 and the period, can you detemine the type of this variable?\n",
+    "\n",
+    "To determine the type of variable star from the period, check the classification diagram:\n",
     "\n",
     "<img src=\"TeenCafeClass.jpeg\">\n",
     "\n",
-    "Now use this period with the Leavitt Law to determine luminosity (i.e., absolute magnitude or intrinsic brightness) and with that, get the distance. "
+    "Now use this period with the Leavitt Law to determine luminosity (i.e., absolute magnitude or intrinsic brightness) and with that, get the distance.\n",
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 3: Use Leavitt Law to estimate distance\n",
+    "# Activity 3: Use Leavitt Law to Estimate Distance\n",
     "\n",
     "In this exercise, we will fit the data to determine the coefficients of Leavitt law, and from that, we can estimate the distance to our nearest spiral galaxy, M31.\n",
     "\n",
@@ -308,23 +419,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 3: Can you estimate the distance to Andromeda galaxy?\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 3: Can you estimate the distance to the Andromeda galaxy?\n",
     "\n",
     "We can use the distance modulus to convert magnitude to distance:\n",
     "\n",
-    "M1 - M2 = 5 x log10(d1/d2)\n",
+    "$M_1 - M_2 = 5 x log_{10}(d_1/d_2)$\n",
     "\n",
-    "or in terms of distance (d1):\n",
+    "or in terms of distance ($d_1$):\n",
     "\n",
-    "d1 = d2*10^((M1-M2)/5)\n",
+    "$d_1 = d_2 10^{(M_1 - M_2)/5}$\n",
     "\n",
     "To get d1, what value for M1 do you need to use from the Leavitt Law above?\n",
     "See previous paragraph before Question 3.\n",
     "\n",
     "Info you will need for M2 and d2: a 1-day period Cepheid has brightness of -2.1 magnitude at 10 pc.\n",
     "\n",
-    "You can use Python as a calculator to determine the distance. Try it yourself using pow(base,exponent) for base^(exponent). Check your answer with the distance here: https://en.wikipedia.org/wiki/Andromeda_Galaxy\n",
-    "\n"
+    "You can use Python as a calculator to determine the distance. Try it yourself using pow(base,exponent) for base^(exponent). Check your answer with the distance here: https://en.wikipedia.org/wiki/Andromeda_Galaxy"
    ]
   },
   {
@@ -347,7 +464,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bonus question: Can you estimate the distance to Large Magellanic Cloud?\n"
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus Question: Can you estimate the distance to Large Magellanic Cloud?"
    ]
   },
   {
@@ -412,6 +536,13 @@
     "d1 = d2 * pow(10,(M1-M2)/5.)\n",
     "\n",
     "print(\"Distance to LMC =\", d1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   }
  ],
