--- a/03_Exoplanets/Exoplanets.ipynb
+++ b/03_Exoplanets/Exoplanets.ipynb
@@ -6,27 +6,123 @@
    "source": [
     "![Project EDEN Logo](EDEN.png)\n",
     "\n",
-    "# Lightcurves of Transiting Exoplanets\n",
+    "<br>\n",
+    "<br>\n",
+    "<font size='6'><u><b>Lightcurves of Transiting Exoplanets</b></u></font>\n",
+    "<br>\n",
     "\n",
-    "#### By [Dr. Daniel Apai](http://apai.space) and [Dr. Ben Rackham](http://rackham.space)\n",
+    "##### By [Dr. Daniel Apai](http://apai.space) and [Dr. Ben Rackham](http://rackham.space)\n",
+    "##### Revised by Andres Jaramillo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table of Contents\n",
     "\n",
+    "* [How to Use This Notebook](#How-to-Use-This-Notebook)\n",
+    "* [1. Introduction](#1.-Introduction)\n",
+    "* [2. Interpreting a Lightcurve with a Transit](#2.-Interpreting-a-Lightcurve-with-a-Transit)\n",
+    "* [3. Determining the Orbital Period](#3.-Determining-the-Orbital-Period)\n",
+    "* [4. Determining the Size of a Planet](#4.-Determining-the-Size-of-a-Planet)\n",
+    "* [5. The Transit of HD 209458 b](#5.-The-Transit-of-HD-209458-b)\n",
+    "* [6. Detecting Transits of Earth-sized Exoplanets](#6.-Detecting-Transits-of-Earth-sized-Exoplanets)\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How to Use This Notebook\n",
+    "\n",
+    "The webpage you are in is actually an app - much like the ones on your cellphone. This app consists of cells.\n",
+    "\n",
+    "An *input* cell looks like a light grey box with an `In [ ]:` on its left. Input cells each contain code - instructions to make the computer do something.\n",
+    "\n",
+    "To activate or select a cell, click anywhere inside of it.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select the cell below and read its contents.</b></font>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Text that follows a \"#\" is known as a comment.\n",
+    "# Comments do not affect your code in any way.\n",
+    "# You should always read the comments at the top of each cell you interact with.\n",
+    "# Comments will be used to describe what the cell's code is actually doing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To execute or run a selected cell, hit `[Shift + Enter]` on your keyboard.\n",
+    "\n",
+    "<div class='alert alert-info'>\n",
+    "    <font size='3'><b>Select the cell below and read its contents. Then, run the cell.</b></font>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Text that DOESN'T follow a \"#\" is considered code.\n",
+    "# Lines of code are instructions given to your computer.\n",
+    "# The line of code below is a \"print\" statement.\n",
+    "# A print statement literally prints out the text between its quotes.\n",
+    "\n",
+    "print(\"Congrats! You have successfully run your first cell!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running a cell creates an *output* directly below it. An output can be some text, a graph, an interactive slider, or even nothing at all! For that last case, you know you have run a cell when the `In [ ]:` becomes `In [#]:`, where \"#\" is any number.\n",
+    "\n",
+    "You can learn more about how Jupyter notebooks work at https://try.jupyter.org/\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Introduction\n",
     "\n",
     "In  this  activity  we  will  explore  how  some  extrasolar  planets  can  be  discovered  and characterized by precisely measuring the brightness of their host stars. When planets pass in front of their host stars (as seen from Earth) they cover part of the host star’s disk — making it look  a  tiny  bit  fainter.  These  events  are  called **planetary  transits**.  The  slight  dimming  has  a characteristic shape and Project EDEN searches for such events to find the planets that cause them.  NASA’s  Kepler  Space  Observatory  has  used  exoplanet  transit  events  to  identify  over 4,000 new extrasolar planets – the largest bounty of new worlds ever!\n",
     "\n",
     "We will explore how transits can be analyzed — not only to identify the presence of a planet, but  also  to  learn  about  its  basic  properties:  size,  orbital  period,  and  —  with  some  additional information — density and likely composition.\n",
-    "\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## First let’s clarify a few key concepts:\n",
     "\n",
     "**Lightcurve:** a figure that shows the brightness of an object (here the host star) over time. For a typical star, this would be a flat line: the star is always the same brightness.\n",
     "\n",
-    "**Transit Event:** an event during which a planet passes in front of its host star (as seen from Earth), blocking a fraction of light from star and causing it to appear dimmer. \n",
+    "**Transit Event:** an event during which a planet passes in front of its host star (as seen from Earth), blocking a fraction of light from star and causing it to appear dimmer.\n",
     "\n",
     "**Transit Depth:** the maximum brightness difference between the in-transit and out-of-transit brightness of the star.\n",
     "\n",
     "**Ingress:** The first stage of the transit, during which only part of the planet is only obscuring the star.\n",
     "\n",
-    "**Egress:** The final stage of the transit, during which only part of the planet is only obscuring the star."
+    "**Egress:** The final stage of the transit, during which only part of the planet is only obscuring the star.\n",
+    "___"
    ]
   },
   {
@@ -172,7 +268,13 @@
     "For Question 1 and all following questions, take a moment to answer the question yourself and then discuss your answer with your partner.\n",
     "\n",
     "##### Question 1: Check Figure 1 above. What is your estimate the transit depth? Approximately how long are the ingress/egress stages?\n",
-    "\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 3. Determining the Orbital Period\n",
     "\n",
     "The **orbital period** is simply the time that it takes for a planet to complete an orbit. For Earth this is one year, but some planets have much shorter and some planets have much longer orbital periods. Once the orbital period of a planet and the mass of its host star are known, it is possible to calculate the radius of its orbit—in other words, how far is it from its host star.\n",
@@ -280,14 +382,15 @@
     "\n",
     "**C)** Fourteen local years have passed on this planet.\n",
     "\n",
-    "**D)** Twelve local years have passed on this planet.\n"
+    "**D)** Twelve local years have passed on this planet.\n",
+    "___"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Determining the Size of a Planet \n",
+    "# 4. Determining the Size of a Planet\n",
     "\n",
     "The larger the planet the larger the fraction of its host star that it can cover. A planet as large as its host star (an unrealistic example) could cover the entire star from view. In reality, most planets are very smaller, compared  to even the smallest stars. Therefore, they only cover part a small fraction of the host star’s disk.\n",
     "\n",
@@ -334,13 +437,14 @@
     "\n",
     "#### Question 4: Which of the following formulae may describe best the transit depth and why?\n",
     "\n",
-    "**A)**  $D = (M_{*}^{2} R_{*}) / (M_{p}^{2} R_{p})$ \n",
+    "**A)**  $D = (M_{*}^{2} R_{*}) / (M_{p}^{2} R_{p})$\n",
     "\n",
     "**B)**  $D = R_{*} / R_{p}$\n",
     "\n",
-    "**C)**  $D = M_{*} / M_{p}$ \n",
+    "**C)**  $D = M_{*} / M_{p}$\n",
     "\n",
-    "**D)**  $D = R_{p}^{2} / R_{*}^{2}$ "
+    "**D)**  $D = R_{p}^{2} / R_{*}^{2}$\n",
+    "___"
    ]
   },
   {
@@ -434,7 +538,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Question 5: What is the best-fit radius for HD 209458 b? "
+    "##### Question 5: What is the best-fit radius for HD 209458 b?\n",
+    "___"
    ]
   },
   {
@@ -500,7 +605,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Question 6:  With this level of noise, how small does the star have to be to reliably detect the transit of an Earth-sized ($R_{p} = 1.0 R_{Earth}$) exoplanet?"
+    "##### Question 6:  With this level of noise, how small does the star have to be to reliably detect the transit of an Earth-sized ($R_{p} = 1.0 R_{Earth}$) exoplanet?\n",
+    "___"
    ]
   }
  ],
